# mipt-java-2017

./: .editorconfig  .gitignore  .travis.yml  .travis_build.sh  README.md  pom.xml
homework-base/: pom.xml
homework-g000-lavrentyev/: pom.xml
homework-g694-bondarev/: .gitignore  pom.xml
homework-g694-cherepkov/: pom.xml
homework-g694-chizh/: pom.xml
homework-g694-derut/: pom.xml
homework-g694-firsov/: pom.xml
homework-g694-kalinin/: pom.xml
homework-g694-kozinov/: pom.xml
homework-g694-nachinkin/: pom.xml
homework-g694-nikonov/: .gitignore  pom.xml
homework-g694-parfenova/: pom.xml
homework-g694-perchuk/: pom.xml
homework-g694-protsenko/: pom.xml
homework-g694-trotsiuk/: pom.xml
homework-g694-veselev/: pom.xml
homework-g694-yusupov/: pom.xml
homework-g695-buchnev/: pom.xml
homework-g695-dyachenko/: pom.xml
homework-g695-gazizullin/: pom.xml
homework-g695-gostkin/: pom.xml
homework-g695-gridasov/: pom.xml  qqqq
homework-g695-kalinochkin/: pom.xml
homework-g695-komendantian/: pom.xml
homework-g695-krivosheev/: pom.xml
homework-g695-lepekhin/: pom.xml
homework-g695-lobov/: pom.xml
homework-g695-loginov/: pom.xml
homework-g695-lunin/: pom.xml
homework-g695-machula/: pom.xml
homework-g695-ogorodnikov/: pom.xml
homework-g695-polyanskiy/: pom.xml
homework-g695-scherbakov/: pom.xml
homework-g695-skakovsky/: pom.xml
homework-g695-starostin/: pom.xml
seminars/yacovlev/sm12/sm12695/src/main/native/: CMakeLists.txt  main.cpp
seminars/yacovlev/sm12/sm12697/src/main/native/: CMakeLists.txt  main.cpp
(+503 files in other folders)
